chore: some more code cleanup